Fixed issue where navbar ws covered by table btns div

--- a/website/static/css/tablestyles.css
+++ b/website/static/css/tablestyles.css
@@ -1,7 +1,3 @@
-*{
-  box-sizing: border-box;
-}
-
 /* ---table Button Section------------ */
 .table_btns-section{
   
